<resources>
    <string name="app_name">ALC Challenge One</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="main_activity_title">ALC 4 Phase 1</string>
    <string name="about_alc_activity_title">About ALC</string>
    <string name="profile_activity_title">My Profile</string>
    <string name="track">Track:  Android</string>
    <string name="country">Country:  Uganda</string>
    <string name="email">Email:  isaacongebo@gmail.com</string>
    <string name="number">Phone Number:  +256 776 203798</string>
    <string name="slack_handle">Slack Username:  @gbo</string>
    <string name="username">Isaac Ongebo</string>
</resources>
